# svd-img-compression

./: README.md  pyproject.toml
