[project]
name = "svd-img-compression"
version = "0.1.0"
description = ""
authors = [
    {name = "RyanPark",email = "parkryan0128@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.10"
numpy  = "^1.26"
scipy  = "^1.13"
pillow = "^10.3"
matplotlib = "^3.9"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1"
pytest-cov = "^5.0"